# mindbots-pfm

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  apply-final-fixes.sh  docker-compose.yml  module.yml
.github/workflows/: ci.yml  enforce-branch-flow.yml
agents/financial-analysis/: .env.example  module.yml  pyproject.toml
agents/financial-analysis/src/financial_analysis/: __init__.py  config.py
agents/financial-analysis/tests/unit/: test_basic.py
agents/receipt-matching/: .env.example  module.yml  pyproject.toml
agents/receipt-matching/src/receipt_matching/: __init__.py  config.py
agents/receipt-matching/tests/unit/: test_basic.py
agents/transaction-classification/: .env.example  .gitignore  README.md  module.yml  pyproject.toml
agents/transaction-classification/src/transaction_classification/: __init__.py  __main__.py  config.py
agents/transaction-classification/src/transaction_classification/agents/: classifier.py
agents/transaction-classification/src/transaction_classification/chains/: classification.py
agents/transaction-classification/src/transaction_classification/models/: transaction.py
agents/transaction-classification/src/transaction_classification/utils/: cache.py
agents/transaction-classification/tests/: conftest.py
agents/transaction-classification/tests/unit/: test_classifier.py
odoo/: README.md  module.yml
odoo/config/: odoo.conf
services/api-gateway/: Dockerfile  README.md  module.yml  pyproject.toml
services/bank-adapter/: .env.example  Dockerfile  README.md  module.yml  pyproject.toml
services/bank-adapter/src/bank_adapter/: __init__.py  main.py
services/bank-adapter/src/bank_adapter/api/: accounts.py  connections.py  health.py  transactions.py
services/bank-adapter/src/bank_adapter/core/: config.py  logging.py
services/bank-adapter/tests/: __init__.py
services/bank-adapter/tests/unit/: test_health.py
shared/: README.md  pyproject.toml
shared/pfm_shared/models/: transaction.py
