[tool.poetry]
name = "receipt-matching"
version = "0.1.0"
description = "AI agent for matching receipts to transactions"
authors = ["Mindbots Inc"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "receipt_matching", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-anthropic = "^0.1.0"
langchain-community = "^0.2.0"
langgraph = "^0.1.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.0"
httpx = "^0.27.0"
redis = "^5.0.0"
numpy = "^1.26.0"
pandas = "^2.2.0"
scikit-learn = "^1.5.0"
asyncio = "^3.4.3"
tenacity = "^8.5.0"
structlog = "^24.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
black = "^24.4.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
ipython = "^8.25.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=receipt_matching --cov-report=term-missing"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80